@@ -43,6 +43,7 @@ Changelog
  * Fix: StreamBlock HTML rendering now handles non-ASCII characters correctly on Python 2 (Mikalai Radchuk)
  * Fix: Fixed a bug preventing pages with a OneToOneField from being copied (Liam Brenner)
  * Fix: SASS compilation errors during Wagtail development no longer cause exit of Gulp process, instead throws error to console and continues (Thomas Winter)
+ * Fix: Explorer page listing now uses specific page models, so that custom URL schemes defined on Page subclasses are respected
 
 1.3.1 (05.01.2016)
 ~~~~~~~~~~~~~~~~~~
